YPBS-256 Kurumsal-Proje tablosu eklendi. Görev, proje return ayarlandı.